--- a/WebContent/res/css/Content.css
+++ b/WebContent/res/css/Content.css
@@ -1,13 +1,11 @@
 @CHARSET "UTF-8";
 
 #content {
-	background-color: #F0F0F0;
-	border: 1px solid #D1D1D1;
+	border: 1px solid rgba(27, 25, 22, 0.8);
+	background-color: rgba(27, 25, 22, 0.5);
 	border-top-style: none;
 	margin: 0px auto;
 	min-height: 300px;
 	overflow: auto;
 	width: 960px;
-
-	box-shadow: 0px 5px 5px #999;
 }
