--- a/WebContent/res/css/Header.css
+++ b/WebContent/res/css/Header.css
@@ -1,15 +1,24 @@
 @CHARSET "UTF-8";
 
-@import url(http://openfontlibrary.org/face/linearmente);
+@font-face {
+    font-family: 'Linearmente';
+    src: url('/GAMER/res/font/linearmente/LinearmenteRegular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 h1 {
-	color: #1B1916;
+	margin: 100px 0px 0px 0px;
+	color: white;
+	text-shadow: 0px 0px 10px rgba(27, 25, 22, 0.8);
 	float: left;
 	font: 70pt/5px 'Linearmente';
+	padding: 5px;
 }
 
 #header {
 	margin: 0px auto;
 	overflow: auto;
 	width: 960px;
+	height: 200px;
 }
