--- a/WebContent/res/css/LoginRegister.css
+++ b/WebContent/res/css/LoginRegister.css
@@ -15,13 +15,17 @@ div#reg-cont {
 
 td.input {
 	text-align: center;
-	width: 300px;
+	width: 250px;
 }
 
 td.input-title {
 	text-align: right;
-	width: 195px;
+	width: 235px;
 	padding: 5px;
+}
+
+td.input-spacer {
+	width: 250px;
 }
 
 #reg-cont input {
@@ -70,4 +74,14 @@ fieldset.reg-log {
 	border-radius: 5px;
 	margin: 10px 80px;
 	border-color: rgba(255, 255, 255, 0.2);
+}
+
+tr.error {
+	/*display: none;*/
+}
+
+tr.error td {
+	text-align: center;
+	color: #99FF66;
+	font-style: italic;
 }
