--- a/WebContent/res/css/Footer.css
+++ b/WebContent/res/css/Footer.css
@@ -1,7 +1,7 @@
 @CHARSET "UTF-8";
 
 #footer {
-	background-color: rgba(27, 25, 22, 0.95);
+	background-color: rgba(27, 25, 22, 1);
 	border:1px solid rgba(27, 25, 22, 0.95);
 	margin: 0px auto 10px auto;
 	overflow: auto;
@@ -10,4 +10,13 @@
 	height: 100px;
 	border-bottom-right-radius: 10px;
 	border-bottom-left-radius: 10px;
+}
+
+#footer h3 {
+	margin: 40px 0px 0px 40px;
+	color: white;
+	text-shadow: 0px 0px 10px rgba(27, 25, 22, 0.8);
+	float: left;
+	font: 35pt/5px 'Linearmente';
+	padding: 5px;
 }
