--- a/WebContent/res/css/Product.css
+++ b/WebContent/res/css/Product.css
@@ -1,35 +1,32 @@
 @CHARSET "UTF-8";
 
-.prod {
-	background-color: rgba(27, 25, 22, 0.9);
-	border: 1px solid rgba(27, 25, 22, 0.9);
+div.prod {
+	background-color: rgba(27, 25, 22, 1);
+	border: none;
 	border-radius: 5px;
 	float: left;
-	height: 500px;
+	height: 440px;
 	margin: 11px;
-	padding: 10px;
-	width: 276px;
+	width: 296px;
 	
+	box-shadow: -2px -2px 10px #111 inset;
 	
+	background-image: url(/GAMER/res/img/misc/lines.png);
+	background-size: 10px 10px;
 }
 
 .prod h2 {
 	text-align: center;
 }
 
-.prod p {
-	text-align: justify;
-	padding: 5px;
-}
-
 .prod button {
-	background-color: rgba(25, 25, 25, 0.1);
+	background-color: rgba(25, 25, 25, 0.3);
 	border: 1px solid rgb(255, 255, 255);
 	color: rgb(255, 255, 255);
 	height: 30px;
 	width: 150px;
 	display: block;
-	margin: 0px auto;
+	margin: 25px auto;
 }
 
 .prod button:hover {
@@ -40,4 +37,22 @@
 	background-repeat: no-repeat;
 	height:200px;
 	width:278px;
+}
+
+td.prod-stock {
+	width: 150px;
+	text-align: center;
+}
+
+td.price {
+	width: 150px;
+	text-align: center;
+}
+
+div.highlight {
+	box-shadow: 2px 2px 10px #222 inset;
+	padding: 10px;
+	border: none;
+	border-radius: 6px;
+	
 }
