--- a/WebContent/res/css/TopBar.css
+++ b/WebContent/res/css/TopBar.css
@@ -5,9 +5,11 @@
 	left: 0px;
 	right: 0px;
 	background-color: #1B1916;
-	border: 2px none #59524B;
+	/*border: 2px none #59524B;*/
+	border: 1px none #666;
 	border-bottom-style: solid;
 	height: 40px;
+	box-shadow: 0px 1px 10px #111;
 }
 
 #top-bar table {
