--- a/WebContent/res/css/TopBar.css
+++ b/WebContent/res/css/TopBar.css
@@ -1,15 +1,15 @@
 @CHARSET "UTF-8";
 
-#top-bar {
+div#top-bar {
 	position: fixed;
 	left: 0px;
 	right: 0px;
 	background-color: #1B1916;
-	/*border: 2px none #59524B;*/
 	border: 1px none #666;
 	border-bottom-style: solid;
 	height: 40px;
-	box-shadow: 0px 1px 10px #111;
+	box-shadow: 0px 3px 10px #111;
+	z-index: 10;
 }
 
 #top-bar table {
